Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 3.2M2
Date: 
----------------------------------
Changes/New Features:

CAY-1842 Remove Listeners support from the Modeler 
CAY-1843 DataMap v7: Stop saving listeners in DataMap, add upgrade handler
CAY-1845 Upgrade javadoc plugin to 2.9.1 
CAY-1846 Reworking of callback mapping
CAY-1847 Make ConverterFactory extensible
CAY-1848 New method: ObjectContext.selectOne(Select query) 
CAY-1851 Generate default serialVersionUID for generated java classes to avoid eclipse warnings
CAY-1852 Straighten thread model and synchronization in the Modeler 
CAY-1855 Iterated and paginated queries must print result counts 
CAY-1856 Expression.expWithParameters does not work when parameters are placed in the inline collection 
CAY-1860 In-memory matching of DataObjects against ObjectId or int
CAY-1861 Remove runtime relationships
CAY-1882 Porting to OSGi environment
CAY-1883 Clean up Cayenne maven structure
CAY-1886 cayenne-di module reorg, new exceptions
CAY-1890 Remove Cayenne-level buffering when retrieving LOBs
CAY-1894 Support native PK generation using sequences for H2 databases
CAY-1899 ServerRuntimeBuilder
CAY-1900 Allow DataNode name to be used as a root of SQLTemplate
CAY-1901 Config-free ServerRuntime
CAY-1904 Simple injection-friendly constructor for AuditableFilter
CAY-1907 RowReaderFactory
CAY-1908 Refactor all SQLActions to work with DataNode
CAY-1911 BatchQuery refactoring - make Iterable
CAY-1912 BatchQueryBuilder refactoring
CAY-1913 Refactor org.apache.cayenne.access.trans into query-specific packages
CAY-1914 Refactor EJBQL-related translators to a standalone 'org.apache.cayenne.access.translator.ejbql' package