@@ -55,6 +55,7 @@ public class LifecycleCallbackRegistry {
     private LifecycleCallbackEventHandler[] eventCallbacks;
     private Map<String, AnnotationReader> annotationsMap;
     private Map<String, Collection<Class<?>>> entitiesByAnnotation;
+    private Map<Class<?>, Boolean> processedEntityClasses;
 
     /**
      * Creates an empty callback registry.
@@ -73,6 +74,11 @@ public class LifecycleCallbackRegistry {
 
         // other "static" lookup maps are initialized on-demand
         this.entitiesByAnnotation = new ConcurrentHashMap<String, Collection<Class<?>>>();
+        this.processedEntityClasses = new ConcurrentHashMap<Class<?>, Boolean>();
+
+        // prepopulating the map so that class hierarchy traversal could
+        // terminate when it reaches Object.
+        processedEntityClasses.put(Object.class, true);
     }
 
     /**
@@ -157,6 +163,52 @@ public class LifecycleCallbackRegistry {
      */
     public void addCallback(LifecycleEvent type, Class<?> entityClass, String methodName) {
         eventCallbacks[type.ordinal()].addListener(entityClass, methodName);
+    }
+    
+    /**
+     * Registers annotated methods of the entity class as callbacks for entity
+     * events.
+     *
+     * @since 3.2
+     */
+    public void addCallbacks(Class<?> entityClass) {
+        if (entityClass == null) {
+            throw new NullPointerException("Null entity class");
+        }
+
+        // Only process Persistent Objects
+        if (!Persistent.class.isAssignableFrom(entityClass)) {
+            throw new CayenneRuntimeException("Class not assignable from Entity");
+        }
+
+        while (entityClass != null && processedEntityClasses.put(entityClass, true) == null) {
+
+            for (Method m : entityClass.getDeclaredMethods()) {
+                for (Annotation a : m.getAnnotations()) {
+                    AnnotationReader reader = this.getAnnotationsMap().get(a.annotationType().getName());
+                    if (reader != null) {
+
+                        // Only register lifecycle annotations used as markers
+                        // (both entities and entityAnnotations must be empty)
+                        if (reader.entities(a).length > 0) {
+                            throw new CayenneRuntimeException(
+                                    "Entity listener annotation should not contain 'entities': " + m.getName());
+                        }
+
+                        if (reader.entityAnnotations(a).length > 0) {
+                            throw new CayenneRuntimeException(
+                                    "Entity listener annotation should not contain 'entityAnnotations': " + m.getName());
+                        }
+
+                        this.eventCallbacks[reader.eventType().ordinal()].addListener(entityClass, m.getName());
+
+                    }
+                }
+            }
+
+            entityClass = entityClass.getSuperclass();
+        }
+
     }
     
     /**
