@@ -13,6 +13,7 @@ Date:
 ----------------------------------
 Changes/New Features:
 
+CAY-1559 Use Lifecycle Annotations as markers on PersistentObject methods
 CAY-1842 Remove Listeners support from the Modeler 
 CAY-1843 DataMap v7: Stop saving listeners in DataMap, add upgrade handler
 CAY-1845 Upgrade javadoc plugin to 2.9.1 
